ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/Benefi__c.object-meta.xml
<CustomObject>
    <label>Beneficiary Master</label>
    <nameField>
        <label>Benefi Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiary Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>