ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Ben_code__c.field-meta.xml
<CustomField>
    <fullName>Ben_code__c</fullName>
    <externalId>true</externalId>
    <label>Ben_code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>