ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>6</length>
    <type>Text</type>
</CustomField>