ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <label>Dealer_Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>