ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Dealership_Nature__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Nature__c</fullName>
    <label>Dealership_Nature</label>
    <length>20</length>
    <type>Text</type>
</CustomField>