ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Indusind_AcNo__c.field-meta.xml
<CustomField>
    <fullName>Indusind_AcNo__c</fullName>
    <label>Indusind_AcNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>