ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Other_AcNo__c.field-meta.xml
<CustomField>
    <fullName>Other_AcNo__c</fullName>
    <label>Other_AcNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>