ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Pseudo_DSM__c.field-meta.xml
<CustomField>
    <fullName>Pseudo_DSM__c</fullName>
    <label>Pseudo_DSM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>