ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>10</length>
    <type>Text</type>
</CustomField>