ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <label>Status Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>