ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/TA__c.field-meta.xml
<CustomField>
    <fullName>TA__c</fullName>
    <label>TA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>