ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/fields/Used_Flag__c.field-meta.xml
<CustomField>
    <fullName>Used_Flag__c</fullName>
    <label>Used_Flag</label>
    <length>4</length>
    <type>Text</type>
</CustomField>