ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Beneficiary__c</columns>
    <columns>Ben_code__c</columns>
    <columns>NAME</columns>
    <columns>Dealer_Code__c</columns>
    <columns>Dealership_Nature__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>Role__c</columns>
    <columns>Email__c</columns>
    <columns>TA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ben_code__c</field>
        <operation>equals</operation>
        <value>BEN 320454</value>
    </filters>
    <label>All</label>
</ListView>