ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Ben_code__c</columns>
    <columns>Dealer_Code__c</columns>
    <columns>Dealership_Nature__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Used_Flag__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>TA__c</columns>
    <columns>Pseudo_DSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>ROYAL AUTOCRYSTAL SERVICES PVT LTD</value>
    </filters>
    <label>All</label>
</ListView>