ProdIND/ProdPrograms/force-app/main/default/objects/Benefi__c/listViews/Blank_Beneficiary_Product.listView-meta.xml
<ListView>
    <fullName>Blank_Beneficiary_Product</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Ben_code__c</columns>
    <columns>Dealer_Code__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>Pseudo_DSM__c</columns>
    <filterScope>Mine</filterScope>
    <label>Blank Beneficiary Product</label>
</ListView>